2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>

	* term/win.c (WIN_enhanced_open): Avoid compiler warning.

2007-07-24  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi:  Add a trailing blank after
	"^6 origin" to suppress error from makeinfo.  Update texi file.

2007-07-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fixed misprint in "3 multi-branch".

2007-07-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/win.trm: Document reading of wgnuplot.ini in user's %APPDATA%
	directory.

2007-07-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (fill_between): Calculate intersection points for
	polar plots using filledcurves, split self-crossing quadrilaterals
	into two pieces.

2007-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (fill_between): For polar plots using filledcurves,
	interpret "above" and "below" in terms of relative radial distance
	from the origin.

2007-07-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Nuke the event list and the associated mutex and state variables.
	Instead, use a pipe to transmit events from the GUI thread to
	term->waitforinput. select() is called without any timeout,
	which is best way to use it.

2007-07-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm: Use cairopdf_rounded instead of wxt_rounded. The two
	terminals are independant.

2007-07-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_betweencurves fill_between): 
	Allow fill between curves to [sort of] work for polar coordinate plots.
	Not implemented: "above" "below" intersecting curves, self-closure.

2007-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):
	Accept a string variable as the file name for "fit via <viafile>".
	Bug #1755532

2007-07-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm: 
	* src/makefile.all: