@@ -1,3 +1,8 @@
+2007-08-01  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (fill_between): Fix clipping bug introduced by
+	polar filledcurve patches.
+
 2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>
 
 	* term/win.c (WIN_enhanced_open): Avoid compiler warning.
